--- a/000-preface.org
+++ b/000-preface.org
@@ -1,3 +1,5 @@
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
+
 Theirs is a mostly peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green at just the right frequency. The Crec are a sort of "cavemen". This word will be used unironically throughout. It's how they would describe themselves. In fact, they would fit a surprising number of your stereotypes about cavepeople.
 
 You will have seen the movie. They do wear minimal animal hide clothing. Wouldn't you? Would you waste hide? You wouldn't if you were a Crec. They do in fact live in caves. Most of your Hollywood stereotypes are based on what regular, modern humans would invent or do to solve a problem, given only nature's resources; and that is what the Crec do also, unsurprisingly. It's no wonder regular people converge on many of the same solutions over and over again. That's why, say for example, unavoidably having to club a loved one over the head is in fact required on occasion. And have you ever tried to get out of the way of an enraged mother baboon? Sometimes you just grab a handful of hair and run for your life. Yes, there is clubbing. And dragging by the hair.
