--- a/000-preface.org
+++ b/000-preface.org
@@ -36,7 +36,7 @@ Wordlessly, but with all the feeling he could muster, Grav sprung into to an ang
 
 He had had a lot to think about with the "enjoyable" family get-together coming closer every day, and now /here/, on this day. It was a miserable thought. Ancient-speak was just a way to list out the things you were supposed to "think". Grav always thought it was truly strange that so many others seemed to have a completely different definition of "think". To Grav, /think/ meant to take what you've seen, heard, and felt in the past and try to use it as a way to /understand/, which in turn to him meant "to be able to predict". This was a relatively new idea of his, but the more he thought about it, the more sense it made. If something could predict something, it made /sense/. It was worthy of scratching down.
 
-It was all about prediction, in Grav's view. Currently he was working on a predict-tool regarding people's behavior. He several imperfect, but pretty good predict-tools about what things cause different reactions in fellow clan members.
+It was all about prediction, in Grav's view. Currently he was working on a predict-tool regarding people's behavior. He had several imperfect, but pretty good predict-tools about what things cause different reactions in fellow clan members.
 
 For instance, he said, "the Chief has made a new take-part-money requirement involving the production mill stones" to Gher, an older great cousin. Before doing this, he made sure he remembered what he thought would happen. Grav put in extra effort to make his delivery as believable as possible. As predicted, in about 5 drop-stone, Gher went through phases of rage, disbelief, some kind of forced serenity, and then rage again. Gher would compose a response in his head, make a "pop" sound with his mouth as he began to speak, but then reconsider as another, better thing to say occurred to him. Grav always wondered why he didn't just decide what he was going to say to begin with, and /then/ open his mouth, possibly even without making a sound.
 
