--- a/000-preface.org
+++ b/000-preface.org
@@ -38,7 +38,7 @@ He had had a lot to think about with the "enjoyable" family get-together coming 
 
 It was all about prediction, in Grav's view. Currently he was working on a predict-tool regarding people's behavior. He had several imperfect, but pretty good predict-tools about what things cause different reactions in fellow clan members.
 
-For instance, he said, "the Chief has made a new take-part-money requirement involving the production mill stones" to Gher, an older great cousin. Before doing this, he made sure he remembered what he thought would happen. Grav put in extra effort to make his delivery as believable as possible. As predicted, in about 5 drop-stone, Gher went through phases of rage, disbelief, some kind of forced serenity, and then rage again. Gher would compose a response in his head, make a "pop" sound with his mouth as he began to speak, but then reconsider as another, better thing to say occurred to him. Grav always wondered why he didn't just decide what he was going to say to begin with, and /then/ open his mouth, possibly even without making a sound.
+For instance, he said, "The Chief has made a new take-part-money requirement involving the production mill stones" to Gher, an older great cousin. Before doing this, he made sure he remembered what he thought would happen. Grav put in extra effort to make his delivery as believable as possible. As predicted, in about 5 drop-stone, Gher went through phases of rage, disbelief, some kind of forced serenity, and then rage again. Gher would compose a response in his head, make a "pop" sound with his mouth as he began to speak, but then reconsider as another, better thing to say occurred to him. Grav always wondered why he didn't just decide what he was going to say to begin with, and /then/ open his mouth, possibly even without making a sound.
 
 The response that Gher apparently thought of as the winner in this competition of ideas was as follows:
 
