--- a/000-preface.org
+++ b/000-preface.org
@@ -52,7 +52,7 @@ And by the name of After-Die-Monster, signs of Father-Brother Verk's nearing mad
 
 That would mean another sun-palm at most.
 
-Grav retired to his burrow, to think about things.
+Grav's attention went back to Gher. "That's what /I/ keep saying." Hoping to shake Grav, as he knew a lecture was coming, he retired to his burrow to think about things.
 
 ---
 
@@ -68,3 +68,52 @@ Today Verk would tell all those who gathered (again, compulsory) in the ancient-
 
 Verk shifted his weight from one sit-ham to the other in his chair in a way that somehow expressed contempt for everyone in the room. It was rumored that he's had a progressively worsening case of between-ham-fire-pebbles for generations.
 
+Verk began.
+
+#+begin_quote
+As some of you know, I had a modest part to play in The Battle of the Snake-Meal, which I numbered this morning to be exactly one squirrel-hoard suns ago as of today."
+
+=##= There was a practiced gasp of wonder from the audience.
+
+The smash that was heard 'round the forest, as you know, marked its start, as a Clorp soldier laying in wait smashed the great melon helmet right off of a devoted hero who was guarding our position at Rhino-Scat Hill."
+
+What tipped us off was the crack of his sturdy-gourd-hat splitting in to. I just barely saved his life. From within the our tactical-burrow we could hear the shouts of the hated Clorp coming our way.
+
+# Audience members duifully make faces of disghust at the mention of the name.
+
+My pal Lu and I, we head up to the top of Rhino-Scat, knowing that there was the beginnings of a boulder-rhino being constructed up at the top. I say 'beginnings' only because it wasn't made official yet. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to out there to the verge and give their life by unlodging the required stones, there not in that day being the idea yet of just tying a some sturdy twist-vine to it and giving a pull from a safe distance.
+
+I had spied something on the way up and decided to have one over on old Lu. I say, 'well by rights, Lu, even as my friend. You need to be the one to go out there and do this. You know I got a family to support and my new possition at camp comes with a lot of responsibility, one that there just ain't a lot of good replacemnts for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry.
+
+I was in a haste of course, so I let him sit on that for just a short while and was gonna let him in on it, but just then, he got choked up a bit and stiffened and said, 'Private Verk, sir! It has been a priviledge fighting for our home, this Forest along side with you. Friend.'
+
+I saw a tear forming so I figured I should get a move on. Did I mention I was in a hurry?
+
+=##= Laugh
+
+'Lu!', I says, 'Lu I was just having a go at ya pal! I spied a stick on the way up that should be long enough. I'll go back and fetch it! You shoulda seen your face!'
+
+I ran not 60 paces and fetched the stick, and was back in a jiffy.
+
+Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. All at once, we heard a rumble. It we didn't see any of the stay boulders move before we heard it. It was like The Army of Ender-Of-All-Questions himself at full charge!
+
+Brfgf. Bugrgl. Bunjle. Brrrkk.
+
+=##= Verk, in his way, was trying to make sound of a thousand mighty boulders on their way to smite.
+
+I mean these things come crashing down, leveling everything! There were trees a man around that were not just snapped, the were sheered off at the surface, after which their roots were pounded into pulp. The land on that side of the hill is still good for working to this day, and it was only known as Left-morning-sun Rhino-Scat Woods before that. And a woods it was.
+
+Then the rhino started meeting up with the men... and the Clorp.
+
+=##= Verk gave his signature knowing wink, and the audience laughs, nervously.
+
+It went through ranks upon ranks of the Clorp. Leaving a genuine bloody mess. Walking through the aftermath was like seeing a flooded mouse burrow after a good rhino trampling. It is something I will always remember.
+
+Our men jeered mightily, tempered maybe a bit by those of our own who got caught up in the destruction.
+
+=##= The audience collectively gave a pained, but soft groan of regret and some gently pulled on their noses.<footnote: this is a gesture of lament and deep respect for unavoidable sacrifices made.>
+
+And that was the end of The Battle of the Snake-Meal. It really was over just about that fast. We really got lucky, plus, you can be sure, we stroked all the snails we could find.
+
+=##= Knowing laugh from audience.
+#+end_quote
