--- a/_notes.org
+++ b/_notes.org
@@ -10,33 +10,25 @@ Outline:
 
 Everything is subject to change, eebureetang. But you'll have to retitle if we don't have a smackdown involving Gog's use of the word "boulder-stump" somehow.
 
-## 000 Preface
+** 000 Preface
 
 We meet the Crec and learn about their world. Verk tells a story. It is deeply meaningful for some.
 
-## 001, wherein we learn of Zog's great acumen and fertility
+** 001, wherein we learn of Zog's great acumen and fertility
 
 We take the reader back to Zog's early years. Zog current clan leader, and that's why it's called "The Zog clan". Zog was a hero's hero, in other words, lucky he's not dead. He was known for his daring and just kind of /falling into/ situations that make him have the appearance of a total badass. He just happens to be the guy in the good -vs evil movie that throws the rock that seriously wounds the bad guy in the satisfying end. Roll credits. But despite all of his impressive doings, he really only has so much of a clue what's going on. He's not learned to have a look of wonderment when things work out for him. Giving the impression that he meant to do that all along is central to his persona. This means giving some pretty weak and convoluted explanations. We hear the perplexing story of Zog's first dive, and as far as anyone knew, first dive ever in the tar pits. He came off looking like a total stud, but came within seconds of dying about eight different times in the process.
 
 Let's have a from-birth to marriage fastforward, followed by tales of daring from his youth. And of course, displaying, entirely for what it is, his deeply held, more or less random believes that he's willing to club-fight over. Lots of adventures. Lots of badassery.
 
 The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
+...
+** 00l wherin, Grav starts studying to become a lawyer (though we have a clever name for it):
+...
+** 00m wherin, Gog scratches "boulder-stump" into a soot-thing and shouts it fromo atop Lame-Monkey mountain on a dare:
+...
+** 00n wherin, The Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings too update the list.:
 
-## 002 wherin, Zog starts studying to become a lawyer (though we have a clever name for it):
-## 003 wherin, :
-## 004 wherin,:
-## 005 wherin,:
-## 006 wherin,:
-## 007 wherin,:
-## 008 wherin,:
-## 009 wherin,:
-## 010 wherin,:
-## 011 wherin,:
-## 012 wherin,:
-## 013 wherin,:
-## 014 wherin,:
-## 015 wherin,:
-## 016 wherin,:
+** 999 wherin,:
 
 Relations:
 
@@ -45,64 +37,16 @@ Relations:
 
 Notes:
 
-- No humorous-fake-terms for things that _they_ have and _we_ have a name for. For example, no need to call a tree a "massive-weed" or to call a cat a "gerbil-dog".
-
-Quoth Verk:
-
-<long-ass-quote>
-As some of you know, I had a modest part to play in The Battle of the Snake-Meal, which I numbered this morning to be exactly one squirrel-hoard suns ago as of today."
-
-=##= There was a practiced gasp of wonder from the audience.
-
-The smash that was heard 'round the forest, as you know, marked its start, as a Clorp soldier laying in wait smashed the great melon helmet right off of a devoted hero who was guarding our position at Rhino-Scat Hill."
-
-What tipped us off was the crack of his sturdy-gourd-hat splitting in to. I just barely saved his life. From within the our tactical-burrow we could hear the shouts of the hated Clorp coming our way.
-
-# Audience members duifully make faces of disghust at the mention of the name.
-
-My pal Lu and I, we head up to the top of Rhino-Scat, knowing that there was the beginnings of a boulder-rhino being constructed up at the top. I say 'beginnings' only because it wasn't made official yet. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to out there to the verge and give their life by unlodging the required stones, there not in that day being the idea yet of just tying a some sturdy twist-vine to it and giving a pull from a safe distance.
-
-I had spied something on the way up and decided to have one over on old Lu. I say, 'well by rights, Lu, even as my friend. You need to be the one to go out there and do this. You know I got a family to support and my new possition at camp comes with a lot of responsibility, one that there just ain't a lot of good replacemnts for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry.
-
-I was in a haste of course, so I let him sit on that for just a short while and was gonna let him in on it, but just then, he got choked up a bit and stiffened and said, 'Private Verk, sir! It has been a priviledge fighting for our home, this Forest along side with you. Friend.'
-
-I saw a tear forming so I figured I should get a move on. Did I mention I was in a hurry?
-
-=##= Laugh
-
-'Lu!', I says, 'Lu I was just having a go at ya pal! I spied a stick on the way up that should be long enough. I'll go back and fetch it! You shoulda seen your face!'
-
-I ran not 60 paces and fetched the stick, and was back in a jiffy.
-
-Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. All at once, we heard a rumble. It we didn't see any of the stay boulders move before we heard it. It was like The Army of Ender-Of-All-Questions himself at full charge!
-
-Brfgf. Bugrgl. Bunjle. Brrrkk.
-
-=##= Verk, in his way, was trying to make sound of a thousand mighty boulders on their way to smite.
-
-I mean these things come crashing down, leveling everything! There were trees a man around that were not just snapped, the were sheered off at the surface, after which their roots were pounded into pulp. The land on that side of the hill is still good for working to this day, and it was only known as Left-morning-sun Rhino-Scat Woods before that. And a woods it was.
-
-Then the rhino started meeting up with the men... and the Clorp.
-
-=##= Verk gave his signature knowing wink, and the audience laughs, nervously.
-
-It went through ranks upon ranks of the Clorp. Leaving a genuine bloody mess. Walking through the aftermath was like seeing a flooded mouse burrow after a good rhino trampling. It is something I will always remember.
-
-Our men jeered mightily, tempered maybe a bit by those of our own who got caught up in the destruction.
-
-=##= The audience collectively gave a pained, but soft groan of regret and some gently pulled on their noses.<footnote: this is a gesture of lament and deep respect for unavoidable sacrifices made.>
-
-And that was the end of The Battle of the Snake-Meal. It really was over just about that fast. We really got lucky, plus, you can be sure, we xxxxhilarious-religious-ritualxxxx
-
-</long-ass-quote>
+- No humorous-fake-terms for things that _they_ have and _we_ have a name for. For example, no need to call a tree a "massive-weed" or to call a cat a "gerbil-dog". Or maybe yes do that. It would be pretty sweet if Crecspeak words got a special tag so we can identify, use special fonts, check for glossary leaks...
 
 Ephemeral Notes:
 
-- "boys and baby-makers..."
+- "boys and baby-makers!..."
 - Someone gets caught using the "bachelor-tree" and is vaguely shamed for it the rest of their life.
 - We need to get around to: Gog said "boulder-trunk" and is tried for obscenity and has Grav as his lawyer.
-- Somewhere here and there we need to throw in a "very special" episode where someone get's gorily torn apart or beaten to death or thrown off a mountain for something that totally deserves it: man-on-man buttfucking, conning granny, child-diddling... Really shock it to 'em.
+- Somewhere here and there we need to throw in a "very special" episode where someone get's gorily torn apart or beaten to death or thrown off a mountain for something that totally deserves it: man-on-man buttfucking, conning granny, child-diddling, disrespecting the Chief... Really shock it to 'em.
 - Is there a character that's always trying to make a flying machine and fails over and over in hilarious ways. Is there?!
+- There needs to be a skill or activity that makes a caveperson really look like a badass. Like taming a hyena and riding on its back (which works out usually.) And a regulatory body that ensures that only the properly skilled are allowed too operate a hyena. They should probably have to wear some kind of coconut helmet, by law. And polshed amber sunglasses: Crec-Bans.
 
 But what's the plot?
 
