--- a/_notes.org
+++ b/_notes.org
@@ -1,4 +1,5 @@
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
+#+OPTIONS: num:nil
 
 (At-Least-For-Now-Secret Notes about /Gog said "Boulder-Stump"!/)
 
