--- a/_notes.org
+++ b/_notes.org
@@ -7,15 +7,15 @@ Everyone is a caveperson. It's as appropriate to say "cavelady" as it is to say 
 
 The feeling is light and easy like a mockumentary. The narrator is just "me", so I don't have to remember what "voice" I'm using. 
 
-Outline:
+* Outline:
 
 Everything is subject to change, eebureetang. But you'll have to retitle if we don't have a smackdown involving Gog's use of the word "boulder-stump" somehow.
 
-** 000 Preface
+** Ch. 000 Preface
 
 We meet the Crec and learn about their world. Verk tells a story. It is deeply meaningful for some.
 
-** 001, wherein we learn of Zog's great acumen and fertility
+** Ch. 001, wherein we learn of Zog's great acumen and fertility
 
 We take the reader back to Zog's early years. Zog current clan leader, and that's why it's called "The Zog clan". Zog was a hero's hero, in other words, lucky he's not dead. He was known for his daring and just kind of /falling into/ situations that make him have the appearance of a total badass. He just happens to be the guy in the good -vs evil movie that throws the rock that seriously wounds the bad guy in the satisfying end. Roll credits. But despite all of his impressive doings, he really only has so much of a clue what's going on. He's not learned to have a look of wonderment when things work out for him. Giving the impression that he meant to do that all along is central to his persona. This means giving some pretty weak and convoluted explanations. We hear the perplexing story of Zog's first dive, and as far as anyone knew, first dive ever in the tar pits. He came off looking like a total stud, but came within seconds of dying about eight different times in the process.
 
@@ -23,11 +23,11 @@ Let's have a from-birth to marriage fastforward, followed by tales of daring fro
 
 The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 ...
-** 00l wherin, Grav starts studying to become a lawyer (though we have a clever name for it):
+** Ch. 00l wherin, Grav starts studying to become a lawyer (though we have a clever name for it):
 ...
-** 00m wherin, Gog scratches "boulder-stump" into a soot-thing and shouts it fromo atop Lame-Monkey mountain on a dare:
+** Ch. 00m wherin, Gog scratches "boulder-stump" into a soot-thing and shouts it fromo atop Lame-Monkey mountain on a dare:
 ...
-** 00n wherin, The Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings too update the list.:
+** Ch. 00n wherin, The Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings too update the list.:
 
 ** 999 wherin,:
 
