--- a/_notes.org
+++ b/_notes.org
@@ -48,7 +48,7 @@ The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 - We need to get around to: Gog said "boulder-stump" and is tried for obscenity and has Grav as his lawyer.
 - Somewhere here and there we need to throw in a "very special" episode where someone get's gorily torn apart or beaten to death or thrown off a mountain for something that totally deserves it: man-on-man buttfucking, conning granny, child-diddling, disrespecting the Chief... Really shock it to 'em.
 - Is there a character that's always trying to make a flying machine and fails over and over in hilarious ways. Is there?!
-- There needs to be a skill or activity that makes a caveperson really look like a badass. Like taming a hyena and riding on its back (which works out usually.) And a regulatory body that ensures that only the properly skilled are allowed too operate a hyena. They should probably have to wear some kind of coconut helmet, by law. And polshed amber sunglasses: Crec-Bans.
+- There needs to be a skill or activity that makes a caveperson really look like a badass. Like taming a hyena and riding on its back (which works out usually.) And a regulatory body that ensures that only the properly skilled are allowed too operate a hyena. They should probably have to wear some kind of coconut helmet, by law. And polished amber sunglasses: Crec-Bans.
 
 But what's the plot?
 
