--- a/_notes.org
+++ b/_notes.org
@@ -7,7 +7,7 @@ Everyone is a caveperson. It's as appropriate to say "cavelady" as it is to say 
 
 The feeling is light and easy like a mockumentary. The narrator is just "me", so I don't have to remember what "voice" I'm using. 
 
-* Outline:
+* Outline
 
 Everything is subject to change, eebureetang. But you'll have to retitle if we don't have a smackdown involving Gog's use of the word "boulder-stump" somehow.
 
@@ -23,25 +23,25 @@ Let's have a from-birth to marriage fastforward, followed by tales of daring fro
 
 The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 ...
-** Ch. 00l wherin, Grav starts studying to become a lawyer (though we have a clever name for it):
+** Ch. 00l wherin, Grav starts studying to become a lawyer (though we have a clever name for it)
 ...
-** Ch. 00m wherin, Gog scratches "boulder-stump" into a soot-thing and shouts it fromo atop Lame-Monkey mountain on a dare:
+** Ch. 00m wherin, Gog scratches "boulder-stump" into a soot-thing and shouts it fromo atop Lame-Monkey mountain on a dare
 ...
-** Ch. 00n wherin, The Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings too update the list:
+** Ch. 00n wherin, The Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings too update the list
 ...
-** Ch. 00o wherein, Zog distracts from the business of the Elders-Quarum in an incident involving a hyena:
-** Ch. 999 wherin,:
+** Ch. 00o wherein, Zog distracts from the business of the Elders-Quarum with an incident involving a hyena
+...
 
-* Relations:
+* Relations
 
 - Grut, haver of potent seed, starter of epochs. He actually does not have an appendage of any kind to his name. He is "Grut". Not, "Grut The Something". He is as far back as memory goes. He and his only wife Jaar are the founders of what is /now/ called the Zog clan.
 - Would like too mechanize this, maybe a python script.
 
-* Notes:
+* Notes
 
 - No humorous-fake-terms for things that _they_ have and _we_ have a name for. For example, no need to call a tree a "massive-weed" or to call a cat a "gerbil-dog". Or maybe yes do that. It would be pretty sweet if Crecspeak words got a special tag so we can identify, use special fonts, check for glossary leaks...
 
-* Ephemeral Notes:
+* Ephemeral Notes
 
 - "boys and baby-makers!..."
 - Someone gets caught using the "bachelor-tree" and is vaguely shamed for it the rest of their life.
@@ -52,7 +52,7 @@ The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 
 But what's the plot?
 
-* Crecspeak:
+* Crecspeak
 
 Words transliterated from Crecspeak are always hyphenated (or /dashed/), like "father-brother" meaning your father's brother, and not /just/ uncle. The distinction is important to the Crec.
 
@@ -60,7 +60,7 @@ For the English speaking audience, we use the closest equivalent in English to d
 
 Be careful not to over-think the meaning, but it should be apparent from context. The words are chosen from English to best convey the meaning. It may sometimes be hard to understand why certain words were chosen. In these cases we are trying to convey the meaning as a Crec would understand it.
 
-** Glossary:
+** Glossary
 
 - after-die-monster: Their Devil. Just one, like you.
 - ancient-speak: Generally meaning "story-telling", this analogous to selling a book in our times. It is both 1) revered by default 2) kind of, let's face it, not always going to be a big deal. Times change, pops.
