--- a/_notes.org
+++ b/_notes.org
@@ -25,7 +25,7 @@ The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 ...
 ** Ch. 00l wherin, Grav starts studying to become a lawyer (though we have a clever name for it)
 ...
-** Ch. 00m wherin, Gog scratches "boulder-stump" into a soot-thing and shouts it fromo atop Lame-Monkey mountain on a dare
+** Ch. 00m wherin, Gog scratches "boulder-stump" into a soot-pallet and shouts it from atop Lame-Monkey Mountain three times on a dare
 ...
 ** Ch. 00n wherin, The Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings too update the list
 ...
@@ -34,8 +34,8 @@ The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 
 * Relations
 
-- Grut, haver of potent seed, starter of epochs. He actually does not have an appendage of any kind to his name. He is "Grut". Not, "Grut The Something". He is as far back as memory goes. He and his only wife Jaar are the founders of what is /now/ called the Zog clan.
-- Would like too mechanize this, maybe a python script.
+- Grut, haver of potent seed, starter of epochs. He actually does not have an appendage of any kind to his name. He is just "Grut", not "Grut The Something". His time is as far back as memory goes. He and his only wife Jaar are the founders of what is /now/ called the Zog clan.
+- Would like too mechanize this and make a pretty diagram, maybe a python script.
 
 * Notes
 
