--- a/_notes.org
+++ b/_notes.org
@@ -23,13 +23,13 @@ Let's have a from-birth to marriage fastforward, followed by tales of daring fro
 
 The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 ...
-** Ch. 00l wherin, Grav starts studying to become a lawyer (though we have a clever name for it)
+** Ch. 00_, wherin Grav starts studying to become a lawyer (though we have a clever name for it)
 ...
-** Ch. 00m wherin, Gog scratches "boulder-stump" into a soot-pallet and shouts it from atop Lame-Monkey Mountain three times on a dare
+** Ch. 00_, wherin Gog scratches "boulder-stump" into a soot-pallet and shouts it from atop Lame-Monkey Mountain three times on a dare
 ...
-** Ch. 00n wherin, The Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings too update the list
+** Ch. 00_, wherin the Make-Stop-Banana-Word Commission of the Elders-Quarum begins proceedings to update the list
 ...
-** Ch. 00o wherein, Zog distracts from the business of the Elders-Quarum with an incident involving a hyena
+** Ch. 00_, wherein Zog distracts from the business of the Elders-Quarum with an incident involving a hyena
 ...
 
 * Relations
