--- a/_notes.org
+++ b/_notes.org
@@ -51,7 +51,7 @@ The lesson? There is a right way to be a Crec. Zog simply exemplifies it.
 
 * Crecspeak
 
-Words transliterated from Crecspeak are always hyphenated (or /dashed/), like "father-brother" meaning your father's brother, and not /just/ uncle. The distinction is important to the Crec.
+Words transliterated from Crecspeak are always hyphenated (or /dashed/), like "father-brother" meaning your father's brother, and not /just/ uncle. (The distinction is important to the Crec.)
 
 For the English speaking audience, we use the closest equivalent in English to determine capitalization. For example, "Do you have a father-brother?" vs "I saw Father-brother Verk".
 
