--- a/000-preface.org
+++ b/000-preface.org
@@ -71,7 +71,7 @@ Verk shifted his weight from one sit-ham to the other in his chair in a way that
 Verk began.
 
 #+begin_quote
-As some of you know, I had a modest part to play in The Battle of the Snake-Meal, which I numbered this morning to be exactly one squirrel-hoard suns ago as of today."
+As some of you know, I had a modest part to play in The Battle of the Snake-Meal, which I numbered this morning to be exactly one mouse-spawn suns ago as of today."
 
 #+end_quote
 There was a practiced gasp of wonder from the audience.
@@ -84,6 +84,8 @@ What tipped us off was the crack of his sturdy-gourd-hat splitting in to. I just
 #+end_quote
 Audience members duifully make faces of disghust at the mention of the name.
 #+begin_quote
+
+XXX Some fighting and observing of fighting happens.
 
 My pal Lu and I, we head up to the top of Rhino-Scat, knowing that there was the beginnings of a boulder-rhino being constructed up at the top. I say 'beginnings' only because it wasn't made official yet. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to out there to the verge and give their life by unlodging the required stones, there not in that day being the idea yet of just tying a some sturdy twist-vine to it and giving a pull from a safe distance.
 
