--- a/_notes.org
+++ b/_notes.org
@@ -80,6 +80,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - Forest-Deer: A political party (same deal) that composes exactly 50% of the Elders-Quorum (You should now be asking if these are the good ones.)
 - juff: An alcoholic beverage made from fermented coconut flesh, and a polite quantity of spit from a special, designated virgin baby-maker, who is chosen yearly as the designated provider of spit (A custom that has been known to ruin some plans.)
 - jump-scare: Living in something like a giant ant hill, opportunities to e.g. hide around the corner and scare the food-clay out of someone abound. This is that.
+- mouse-spawn: Exactly 500. The term comes from the number of mice believed to result from putting one mating pair of mice in an unoccupied one-family cave in the course of four moons. Which is also roughly the amount of time required to make the Unkempt-Loud-Suffering Pilgrimage from The Forest of Crec and back.
 - predict-tool: Probably a good start on the idea of "a hypothesis".
 - relax-marks: Everyone sits on rocks. Some rocks get a lot of mileage. Inevitably there are brown, burnished areas that repel liquids well and indicate a sweet rock to sit on. So there is some tension: On the one hand they are a mark of shame, sloth and bad housekeeping, but on the other hand everyone likes a good sit.
 - rhino-calf: It means literally that but is also a term of endearment that you can still say without being too creepy. Like "dear".
