--- a/000-preface.org
+++ b/000-preface.org
@@ -10,7 +10,7 @@ We will get to dinosaurs. It's complicated.
 
 And pretty much everyone lives in a cave. Let's get that out of the way. What's sometimes not so beautiful is how each opening often looks like a rather droopy upper eyelid the morning after a socially acceptable quantity of good juff. Fire produces smoke, and smoke must go /somewhere/. As the Crec saying goes, "Where there is fire, there is smoke." A bit of light in the early evening is nice. A bit of warmth is even nicer, but not always needed. All year long, fires get used for something or other. And that smoke makes a mess. You would be forgiven if you thought someone was trying to smoke someone else out of their cave. Of course that happens too. Thag's Burrow Buster.
 
-The Zog clan, whom you will soon meet, live in such a cave. A nice cave, for sure. The beautiful multi-orange, irregular cone in which the Zog clan lived was at this point very much hollowed out. It was among the lighter mountains. The same family, all the way back to the times of Grut<footnote #1: the great>, has occupied this hill, which was given the name Bhorv Zolk long ago. The name now has as much meaning to them as it does to you.
+The Zog clan, whom you will soon meet, live in such a cave. A nice cave, for sure. The beautiful multi-orange, irregular cone in which the Zog clan lived was at this point very much hollowed out. It was among the lighter mountains. The same family, all the way back to the times of Grut[fn:: The great], has occupied this hill, which was given the name Bhorv Zolk long ago. The name now has as much meaning to them as it does to you.
 
 A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the grandkids to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat. The soot stains above the opening to the parlor were an especially large, especially shameful bit of soot-pallet. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket full of pine cones for scrubbing. Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
 
